[gd_scene load_steps=18 format=2]

[ext_resource path="res://main/main.gd" type="Script" id=1]
[ext_resource path="res://player/player.tscn" type="PackedScene" id=2]
[ext_resource path="res://HUD/HUD.tscn" type="PackedScene" id=3]
[ext_resource path="res://art/main/background_s1.png" type="Texture" id=4]
[ext_resource path="res://music/track_1.wav" type="AudioStream" id=5]
[ext_resource path="res://camera/camera.tscn" type="PackedScene" id=6]
[ext_resource path="res://art/tutorial/enemy_ins.png" type="Texture" id=7]
[ext_resource path="res://art/tutorial/obstacle_ins.png" type="Texture" id=8]
[ext_resource path="res://art/tutorial/move_ins.png" type="Texture" id=9]
[ext_resource path="res://art/tutorial/dash_ins.png" type="Texture" id=10]
[ext_resource path="res://art/tutorial/manuever_ins.png" type="Texture" id=11]
[ext_resource path="res://obstacle/obstacle.tscn" type="PackedScene" id=12]
[ext_resource path="res://enemy/dash_enemy.tscn" type="PackedScene" id=13]

[sub_resource type="TileSet" id=1]
0/name = "background_s1.png 0"
0/texture = ExtResource( 4 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 256, 256 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = -2
1/name = "background_s1.png 1"
1/texture = ExtResource( 4 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 256, 0, 256, 256 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape_one_way = false
1/shape_one_way_margin = 0.0
1/shapes = [  ]
1/z_index = -2
2/name = "background_s1.png 2"
2/texture = ExtResource( 4 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 512, 0, 256, 256 )
2/tile_mode = 0
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/shape_offset = Vector2( 0, 0 )
2/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
2/shape_one_way = false
2/shape_one_way_margin = 0.0
2/shapes = [  ]
2/z_index = -2
3/name = "background_s1.png 3"
3/texture = ExtResource( 4 )
3/tex_offset = Vector2( 0, 0 )
3/modulate = Color( 1, 1, 1, 1 )
3/region = Rect2( 768, 0, 256, 256 )
3/tile_mode = 0
3/occluder_offset = Vector2( 0, 0 )
3/navigation_offset = Vector2( 0, 0 )
3/shape_offset = Vector2( 0, 0 )
3/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
3/shape_one_way = false
3/shape_one_way_margin = 0.0
3/shapes = [  ]
3/z_index = -2
4/name = "background_s1.png 4"
4/texture = ExtResource( 4 )
4/tex_offset = Vector2( 0, 0 )
4/modulate = Color( 1, 1, 1, 1 )
4/region = Rect2( 1024, 0, 256, 256 )
4/tile_mode = 0
4/occluder_offset = Vector2( 0, 0 )
4/navigation_offset = Vector2( 0, 0 )
4/shape_offset = Vector2( 0, 0 )
4/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
4/shape_one_way = false
4/shape_one_way_margin = 0.0
4/shapes = [  ]
4/z_index = -2
5/name = "background_s1.png 5"
5/texture = ExtResource( 4 )
5/tex_offset = Vector2( 0, 0 )
5/modulate = Color( 1, 1, 1, 1 )
5/region = Rect2( 1280, 0, 256, 256 )
5/tile_mode = 0
5/occluder_offset = Vector2( 0, 0 )
5/navigation_offset = Vector2( 0, 0 )
5/shape_offset = Vector2( 0, 0 )
5/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
5/shape_one_way = false
5/shape_one_way_margin = 0.0
5/shapes = [  ]
5/z_index = -2
6/name = "background_s1.png 6"
6/texture = ExtResource( 4 )
6/tex_offset = Vector2( 0, 0 )
6/modulate = Color( 1, 1, 1, 1 )
6/region = Rect2( 1536, 0, 256, 256 )
6/tile_mode = 0
6/occluder_offset = Vector2( 0, 0 )
6/navigation_offset = Vector2( 0, 0 )
6/shape_offset = Vector2( 0, 0 )
6/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
6/shape_one_way = false
6/shape_one_way_margin = 0.0
6/shapes = [  ]
6/z_index = -2
7/name = "background_s1.png 7"
7/texture = ExtResource( 4 )
7/tex_offset = Vector2( 0, 0 )
7/modulate = Color( 1, 1, 1, 1 )
7/region = Rect2( 1792, 0, 256, 256 )
7/tile_mode = 0
7/occluder_offset = Vector2( 0, 0 )
7/navigation_offset = Vector2( 0, 0 )
7/shape_offset = Vector2( 0, 0 )
7/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
7/shape_one_way = false
7/shape_one_way_margin = 0.0
7/shapes = [  ]
7/z_index = -2
8/name = "background_s1.png 8"
8/texture = ExtResource( 4 )
8/tex_offset = Vector2( 0, 0 )
8/modulate = Color( 1, 1, 1, 1 )
8/region = Rect2( 0, 256, 256, 256 )
8/tile_mode = 0
8/occluder_offset = Vector2( 0, 0 )
8/navigation_offset = Vector2( 0, 0 )
8/shape_offset = Vector2( 0, 0 )
8/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
8/shape_one_way = false
8/shape_one_way_margin = 0.0
8/shapes = [  ]
8/z_index = -2
9/name = "background_s1.png 9"
9/texture = ExtResource( 4 )
9/tex_offset = Vector2( 0, 0 )
9/modulate = Color( 1, 1, 1, 1 )
9/region = Rect2( 256, 256, 256, 256 )
9/tile_mode = 0
9/occluder_offset = Vector2( 0, 0 )
9/navigation_offset = Vector2( 0, 0 )
9/shape_offset = Vector2( 0, 0 )
9/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
9/shape_one_way = false
9/shape_one_way_margin = 0.0
9/shapes = [  ]
9/z_index = -2
10/name = "background_s1.png 10"
10/texture = ExtResource( 4 )
10/tex_offset = Vector2( 0, 0 )
10/modulate = Color( 1, 1, 1, 1 )
10/region = Rect2( 512, 256, 256, 256 )
10/tile_mode = 0
10/occluder_offset = Vector2( 0, 0 )
10/navigation_offset = Vector2( 0, 0 )
10/shape_offset = Vector2( 0, 0 )
10/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
10/shape_one_way = false
10/shape_one_way_margin = 0.0
10/shapes = [  ]
10/z_index = -2
11/name = "background_s1.png 11"
11/texture = ExtResource( 4 )
11/tex_offset = Vector2( 0, 0 )
11/modulate = Color( 1, 1, 1, 1 )
11/region = Rect2( 768, 256, 256, 256 )
11/tile_mode = 0
11/occluder_offset = Vector2( 0, 0 )
11/navigation_offset = Vector2( 0, 0 )
11/shape_offset = Vector2( 0, 0 )
11/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
11/shape_one_way = false
11/shape_one_way_margin = 0.0
11/shapes = [  ]
11/z_index = -2
12/name = "background_s1.png 12"
12/texture = ExtResource( 4 )
12/tex_offset = Vector2( 0, 0 )
12/modulate = Color( 1, 1, 1, 1 )
12/region = Rect2( 1024, 256, 256, 256 )
12/tile_mode = 0
12/occluder_offset = Vector2( 0, 0 )
12/navigation_offset = Vector2( 0, 0 )
12/shape_offset = Vector2( 0, 0 )
12/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
12/shape_one_way = false
12/shape_one_way_margin = 0.0
12/shapes = [  ]
12/z_index = -2
13/name = "background_s1.png 13"
13/texture = ExtResource( 4 )
13/tex_offset = Vector2( 0, 0 )
13/modulate = Color( 1, 1, 1, 1 )
13/region = Rect2( 1280, 256, 256, 256 )
13/tile_mode = 0
13/occluder_offset = Vector2( 0, 0 )
13/navigation_offset = Vector2( 0, 0 )
13/shape_offset = Vector2( 0, 0 )
13/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
13/shape_one_way = false
13/shape_one_way_margin = 0.0
13/shapes = [  ]
13/z_index = -2
14/name = "background_s1.png 14"
14/texture = ExtResource( 4 )
14/tex_offset = Vector2( 0, 0 )
14/modulate = Color( 1, 1, 1, 1 )
14/region = Rect2( 1536, 256, 256, 256 )
14/tile_mode = 0
14/occluder_offset = Vector2( 0, 0 )
14/navigation_offset = Vector2( 0, 0 )
14/shape_offset = Vector2( 0, 0 )
14/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
14/shape_one_way = false
14/shape_one_way_margin = 0.0
14/shapes = [  ]
14/z_index = -2
15/name = "background_s1.png 15"
15/texture = ExtResource( 4 )
15/tex_offset = Vector2( 0, 0 )
15/modulate = Color( 1, 1, 1, 1 )
15/region = Rect2( 1792, 256, 256, 256 )
15/tile_mode = 0
15/occluder_offset = Vector2( 0, 0 )
15/navigation_offset = Vector2( 0, 0 )
15/shape_offset = Vector2( 0, 0 )
15/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
15/shape_one_way = false
15/shape_one_way_margin = 0.0
15/shapes = [  ]
15/z_index = -2
16/name = "background_s1.png 16"
16/texture = ExtResource( 4 )
16/tex_offset = Vector2( 0, 0 )
16/modulate = Color( 1, 1, 1, 1 )
16/region = Rect2( 0, 512, 256, 256 )
16/tile_mode = 0
16/occluder_offset = Vector2( 0, 0 )
16/navigation_offset = Vector2( 0, 0 )
16/shape_offset = Vector2( 0, 0 )
16/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
16/shape_one_way = false
16/shape_one_way_margin = 0.0
16/shapes = [  ]
16/z_index = -2
17/name = "background_s1.png 17"
17/texture = ExtResource( 4 )
17/tex_offset = Vector2( 0, 0 )
17/modulate = Color( 1, 1, 1, 1 )
17/region = Rect2( 256, 512, 256, 256 )
17/tile_mode = 0
17/occluder_offset = Vector2( 0, 0 )
17/navigation_offset = Vector2( 0, 0 )
17/shape_offset = Vector2( 0, 0 )
17/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
17/shape_one_way = false
17/shape_one_way_margin = 0.0
17/shapes = [  ]
17/z_index = -2
18/name = "background_s1.png 18"
18/texture = ExtResource( 4 )
18/tex_offset = Vector2( 0, 0 )
18/modulate = Color( 1, 1, 1, 1 )
18/region = Rect2( 512, 512, 256, 256 )
18/tile_mode = 0
18/occluder_offset = Vector2( 0, 0 )
18/navigation_offset = Vector2( 0, 0 )
18/shape_offset = Vector2( 0, 0 )
18/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
18/shape_one_way = false
18/shape_one_way_margin = 0.0
18/shapes = [  ]
18/z_index = -2
19/name = "background_s1.png 19"
19/texture = ExtResource( 4 )
19/tex_offset = Vector2( 0, 0 )
19/modulate = Color( 1, 1, 1, 1 )
19/region = Rect2( 768, 512, 256, 256 )
19/tile_mode = 0
19/occluder_offset = Vector2( 0, 0 )
19/navigation_offset = Vector2( 0, 0 )
19/shape_offset = Vector2( 0, 0 )
19/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
19/shape_one_way = false
19/shape_one_way_margin = 0.0
19/shapes = [  ]
19/z_index = -2
20/name = "background_s1.png 20"
20/texture = ExtResource( 4 )
20/tex_offset = Vector2( 0, 0 )
20/modulate = Color( 1, 1, 1, 1 )
20/region = Rect2( 1024, 512, 256, 256 )
20/tile_mode = 0
20/occluder_offset = Vector2( 0, 0 )
20/navigation_offset = Vector2( 0, 0 )
20/shape_offset = Vector2( 0, 0 )
20/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
20/shape_one_way = false
20/shape_one_way_margin = 0.0
20/shapes = [  ]
20/z_index = -2
21/name = "background_s1.png 21"
21/texture = ExtResource( 4 )
21/tex_offset = Vector2( 0, 0 )
21/modulate = Color( 1, 1, 1, 1 )
21/region = Rect2( 1280, 512, 256, 256 )
21/tile_mode = 0
21/occluder_offset = Vector2( 0, 0 )
21/navigation_offset = Vector2( 0, 0 )
21/shape_offset = Vector2( 0, 0 )
21/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
21/shape_one_way = false
21/shape_one_way_margin = 0.0
21/shapes = [  ]
21/z_index = -2
22/name = "background_s1.png 22"
22/texture = ExtResource( 4 )
22/tex_offset = Vector2( 0, 0 )
22/modulate = Color( 1, 1, 1, 1 )
22/region = Rect2( 1536, 512, 256, 256 )
22/tile_mode = 0
22/occluder_offset = Vector2( 0, 0 )
22/navigation_offset = Vector2( 0, 0 )
22/shape_offset = Vector2( 0, 0 )
22/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
22/shape_one_way = false
22/shape_one_way_margin = 0.0
22/shapes = [  ]
22/z_index = -2
23/name = "background_s1.png 23"
23/texture = ExtResource( 4 )
23/tex_offset = Vector2( 0, 0 )
23/modulate = Color( 1, 1, 1, 1 )
23/region = Rect2( 1792, 512, 256, 256 )
23/tile_mode = 0
23/occluder_offset = Vector2( 0, 0 )
23/navigation_offset = Vector2( 0, 0 )
23/shape_offset = Vector2( 0, 0 )
23/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
23/shape_one_way = false
23/shape_one_way_margin = 0.0
23/shapes = [  ]
23/z_index = -2

[sub_resource type="Animation" id=2]
resource_name = "fade_in"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "fade_out"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Environment" id=4]
background_mode = 4
glow_intensity = 1.33
glow_strength = 1.12
glow_blend_mode = 0
glow_bicubic_upscale = true
adjustment_enabled = true
adjustment_contrast = 2.21

[node name="main" type="Node2D"]
script = ExtResource( 1 )

[node name="player" parent="." instance=ExtResource( 2 )]
position = Vector2( 515.34, 300 )

[node name="bk_map" type="TileMap" parent="."]
tile_set = SubResource( 1 )
cell_size = Vector2( 256, 256 )
format = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="bk_map"]
anims/fade_in = SubResource( 2 )
anims/fade_out = SubResource( 3 )

[node name="environment" type="WorldEnvironment" parent="."]
environment = SubResource( 4 )

[node name="HUD" parent="." instance=ExtResource( 3 )]

[node name="camera" parent="." instance=ExtResource( 6 )]
position = Vector2( 512, 300 )

[node name="Tween" type="Tween" parent="camera"]

[node name="music" type="AudioStreamPlayer2D" parent="."]
pause_mode = 2
stream = ExtResource( 5 )
autoplay = true

[node name="enemy_spawner" type="Timer" parent="."]

[node name="enemy_container" type="Node" parent="."]

[node name="obstacle_spawner" type="Timer" parent="."]

[node name="obstacle_container" type="Node" parent="."]

[node name="particle_spawner" type="Timer" parent="."]
wait_time = 5.0

[node name="particle_container" type="Node" parent="."]

[node name="tutorial_nodes" type="Node" parent="."]

[node name="move_ins" type="Sprite" parent="tutorial_nodes"]
position = Vector2( 773.265, 220 )
z_index = -1
texture = ExtResource( 9 )

[node name="maneuver_ins" type="Sprite" parent="tutorial_nodes"]
position = Vector2( 1473.83, 220 )
z_index = -1
texture = ExtResource( 11 )

[node name="dash_ins" type="Sprite" parent="tutorial_nodes"]
position = Vector2( 2700, 220 )
z_index = -1
texture = ExtResource( 10 )

[node name="obstacle_ins" type="Sprite" parent="tutorial_nodes"]
position = Vector2( 1766.6, 283.175 )
z_index = -1
texture = ExtResource( 8 )

[node name="obstacle" parent="tutorial_nodes" instance=ExtResource( 12 )]
position = Vector2( 1767.34, 327.559 )

[node name="enemy_ins" type="Sprite" parent="tutorial_nodes"]
position = Vector2( 3013.86, 235.126 )
z_index = -1
texture = ExtResource( 7 )

[node name="enemy" parent="tutorial_nodes" groups=[
"tutorial_node",
] instance=ExtResource( 13 )]
position = Vector2( 3020.46, 287.077 )
[connection signal="player_dead" from="player" to="." method="game_over"]
[connection signal="update_HUD_info" from="player" to="HUD" method="_on_player_update_HUD_info"]
[connection signal="update_hp_bar" from="player" to="HUD" method="update_hp_bar"]
[connection signal="animation_finished" from="bk_map/AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="reset_items" from="HUD" to="." method="start_real_game"]
[connection signal="tween_completed" from="camera/Tween" to="." method="_on_Tween_tween_completed"]
[connection signal="timeout" from="enemy_spawner" to="." method="_on_enemy_spawner_timeout"]
[connection signal="timeout" from="obstacle_spawner" to="." method="_on_obstacle_spawner_timeout"]
[connection signal="timeout" from="particle_spawner" to="." method="_on_particle_spawner_timeout"]
[connection signal="tutorial_complete" from="tutorial_nodes/enemy" to="." method="tutorial_complete"]
